Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2319
helpers removeRange can crash if collection/db is drop at the same time
Undo Transition
Closed
null
Export
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.6.5-post
,
1.7.5
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Eliot Horowitz (Inactive)
Participants:
auto
,
Eliot Horowitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Jan 03 2011 01:24:44 AM UTC
Updated:
Jul 12 2016 12:18:36 AM UTC
Resolved:
Jan 03 2011 01:30:28 AM UTC
PagerDuty