release ClientCursor in removeRange since sometimes the cursor itself is deleted SERVER-2319